--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style> @import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap'); </style>
 </head>
+
 <body>
-  
+  <main style="text-align: center; font-family: 'Noto Serif', serif;">
+    <header >
+      <h1 style=" font-size: 80px; margin: 0;">404</h1>
+    </header>
+    <section >
+      <img src="./ksk.png" alt="foto" style="width: 1000px;">
+      <p style="font-size: 40px; margin-bottom: 0; margin-top: 5px;">Look like you`re lost</p>
+      <p style=" font-size: 16px; margin-top: 8px; margin-bottom: 40px;">the page you are looking for not aviable!</p>
+      <a href="#" style="background-color: #37ad31; padding: 10px; padding-left: 20px; padding-right: 20px; text-decoration: none; color: white;">Go to Home</a>
+    </section>
+
+  </main>
 </body>
 </html>
